# UniTeam

./: .gitattributes  .gitignore  README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_04_30_1702-8ccc3f1b1c2f_add_base_tables.py  2026_04_30_1758-870847461cf5_add_project_category.py  2026_04_30_1815-79634d6dc5df_add_project_category.py  2026_05_05_2056-a359cfadac20_added_two_column_to_users.py  2026_05_06_0001-aaca26fc121c_added_new_table_projecdtvacancy.py  2026_05_06_1112-183cb0ad8c16_remove_is_draft_from_projects.py  2026_05_06_1126-7595219c7667_remove_is_draft_from_projects.py  2026_05_06_1128-632eb93cd0a7_update_vacancy_table.py  2026_05_06_1646-247e7087111b_update_projects_table.py  2026_05_08_1241-3f193bc50ab5_add_column_role.py  2026_05_08_1300-829f958b5ded_add_column_status.py  2026_05_08_1314-b3dbf64037d4_add_column_is_blocked.py  2026_05_13_1018-1615466565dd_create_column_completed_at_in_projects.py  2026_05_13_1031-7511e9a5d519_remove_skills_table_and_m2m_table.py  2026_05_13_1051-81e10a8f2138_remove_courser_year_from_users_table.py
backend/password_reset/: router.py  schemas.py  service.py
backend/src/: main.py
backend/src/admin/: dependencies.py  router.py  schemas.py  service.py
backend/src/auth/: __init__.py  router.py  schemas.py  service.py  utils.py
backend/src/core/: config.py
backend/src/password_reset/: router.py  service.py
backend/src/projects/: router.py  schemas.py  service.py
backend/src/uploads/: router.py
backend/src/users/: dependencies.py  router.py  schemas.py  service.py
(+218 files in other folders)
